# squp

./: DataConversion.py  GuiManual.py  InventoryGui.pyw  LICENSE  MANIFEST.in  README.md  SystemShortcuts.py  UpdateGui.py  companyemail.txt  email_script.py  example_items.json  information.py  interface.py  inventory.py  mkdocs.yml  pyproject.toml  setup.py
docs/: about.md  index.md
docs/gui-guide/: create-edit.md  database-page.md  gui-guide.md  index.md  menus.md  orders-page.md  updates-page.md
docs/gui-guide/inventory/: show-hide.md  stock-management.md  upload-offline.md
jsons/: jsonMerge.py
jsons/old/: items.json  newItems.json  newItemsST.json
squp/: InventoryGui.pyw  MANIFEST.in  __init__.py  information.py  interface.py  shortcuts.py
squp.egg-info/: PKG-INFO
